--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -12,11 +12,16 @@
        <div class="grid-cards">
             <div class="container">
                 <div class="row row-cols-4">
-                    @for (int i = 0; i < 25; i++)
+                    @foreach(var hero in Model.Heroes)
                     {
-                                <div class=" col hero-card" style="background: url(https://minio.nplus1.ru/app-images/178182/60d7b371c9ad2a17c302b00d4d5a74b8.jpg); left: calc(244px + 0%); top: calc(142px);">
-                                    <p class="card-text"><b>Morphling</b></p>
-                                </div>                       
+                        if(hero.primary_attribute == 0)
+                        {
+                            <a asp-page="Hero" asp-route-id="@hero.id_api">
+                                <div class=" col hero-card" style="background: url(@("https://cdn.cloudflare.steamstatic.com/apps/dota2/images/dota_react/heroes/"+hero.name_handle+".png")); left: calc(244px + 0%); top: calc(142px);">
+                                    <p class="card-text"><b>@hero.name</b></p>
+                                </div>
+                            </a>
+                        }                      
                     }
                 </div>
             </div>
@@ -30,11 +35,16 @@
         <div class="grid-cards">
             <div class="container">
                 <div class="row row-cols-4">
-                    @for (int i = 0; i < 25; i++)
+                    @foreach (var hero in Model.Heroes)
                     {
-                                <div class=" col hero-card" style="background: url(https://minio.nplus1.ru/app-images/178182/60d7b371c9ad2a17c302b00d4d5a74b8.jpg); left: calc(244px + 0%); top: calc(142px);">
-                                    <p class="card-text"><b>Morphling</b></p>
-                                </div>                       
+                        if (hero.primary_attribute == 1)
+                        {
+                            <a asp-page="Hero" asp-route-id="@hero.id_api">
+                                <div class=" col hero-card" style="background: url(@("https://cdn.cloudflare.steamstatic.com/apps/dota2/images/dota_react/heroes/"+hero.name_handle+".png")); left: calc(244px + 0%); top: calc(142px);">
+                                    <p class="card-text"><b>@hero.name</b></p>
+                                </div>
+                            </a>
+                        }
                     }
                 </div>
             </div>
@@ -48,11 +58,16 @@
         <div class="grid-cards">
             <div class="container">
                 <div class="row row-cols-4">
-                    @for (int i = 0; i < 25; i++)
+                    @foreach (var hero in Model.Heroes)
                     {
-                                <div class=" col hero-card" style="background: url(https://minio.nplus1.ru/app-images/178182/60d7b371c9ad2a17c302b00d4d5a74b8.jpg); left: calc(244px + 0%); top: calc(142px);">
-                                    <p class="card-text"><b>Morphling</b></p>
-                                </div>                       
+                        if (hero.primary_attribute == 2)
+                        {
+                            <a asp-page="Hero" asp-route-id="@hero.id_api">
+                                <div class=" col hero-card" style="background: url(@("https://cdn.cloudflare.steamstatic.com/apps/dota2/images/dota_react/heroes/"+hero.name_handle+".png")); left: calc(244px + 0%); top: calc(142px);">
+                                    <p class="card-text"><b>@hero.name</b></p>
+                                </div>
+                            </a>
+                        }
                     }
                 </div>
             </div>
@@ -65,12 +80,17 @@
         <div class="grid-cards">
             <div class="container">
                 <div class="row row-cols-4">
-                    @for(int i=0; i<25; i++)
-                    {
-                            <div class=" col hero-card" style="background: url(https://minio.nplus1.ru/app-images/178182/60d7b371c9ad2a17c302b00d4d5a74b8.jpg); left: calc(244px + 0%); top: calc(142px);">
-                                <p class="card-text"><b>Morphling</b></p>
-                            </div>                       
-                    }
+                        @foreach (var hero in Model.Heroes)
+                        {
+                            if (hero.primary_attribute == 3)
+                            {
+                                <a asp-page="Hero" asp-route-id="@hero.id_api">
+                                    <div class=" col hero-card" style="background: url(@("https://cdn.cloudflare.steamstatic.com/apps/dota2/images/dota_react/heroes/"+hero.name_handle+".png")); left: calc(244px + 0%); top: calc(142px);">
+                                        <p class="card-text"><b>@hero.name</b></p>
+                                    </div>
+                                </a>
+                            }
+                        }
                 </div>
             </div>
         </div>
